[Issue 41][Removed blurr when expanding expandable]

--- a/vITalAngular/src/app/views/patient-overview/patient-overview.component.css
+++ b/vITalAngular/src/app/views/patient-overview/patient-overview.component.css
@@ -7,6 +7,7 @@
   margin-right: 0px;
   margin-left: 0px;
   display: grid;
+  position: relative;
 }
 
 .vertical {
